[workspace]
members = [
  "desmos_compiler"
]

[workspace.dependencies]
anyhow = "1.0.86"
inkwell = { version = "0.5.0", features = ["llvm18-0", "llvm18-0-prefer-dynamic"] }
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"
thiserror = "2.0.7"
iced = {version = "0.13.1", features = ["canvas"]}
desmos_compiler = {path = "./desmos_compiler"}
clap = "4.5.23"
reqwest = "0.12.9"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "somsed"
version = "0.1.0"
edition = "2021"

[dependencies]
desmos_compiler = {workspace = true}
iced = {workspace = true}
clap = {workspace = true}
inkwell = {workspace = true}

reqwest = {workspace = true} 
anyhow = {workspace = true}
once_cell = "1.20.2"
