[workspace]
members = [
  "desmos_compiler",
  "backends/llvm-backend"
]

[workspace.dependencies]
anyhow = "1.0.86"
inkwell = { version = "0.5.0", features = ["llvm18-0", "llvm18-0-prefer-dynamic"] }
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"
thiserror = "2.0.7"
iced = {version = "0.13.1", features = ["canvas"]}
desmos_compiler = {path = "./desmos_compiler"}
reqwest = "0.12.9"
flume = "0.11.1"
serde = "1.0"
serde_json = "1.0"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "somsed"
version = "0.1.0"
edition = "2021"

[dependencies]
desmos_compiler = {workspace = true}
iced = {workspace = true}
inkwell = {workspace = true}

reqwest = {workspace = true} 
anyhow = {workspace = true}
flume = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
