[package]
name = "desmos_compiler"
version = {workspace = true}
edition = {workspace = true}

[dependencies]
anyhow = {workspace = true}
inkwell = {workspace = true}
lazy_static = {workspace = true}
pest = {workspace = true}
pest_derive = {workspace = true}
thiserror = {workspace = true}
cranelift = {workspace = true}
cranelift-jit = {workspace = true}
cranelift-module = {workspace = true}
