[package]
name = "desmos_compiler"
version = {workspace = true}
edition = {workspace = true}


[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }

inkwell = { workspace = true }
cranelift = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
logos = "0.15.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
